syntax = "proto3";

package eth.service.v1;

service BlockMeta {
  rpc GetMonth(GetMonthRequest) returns (stream MonthResponse);
  rpc GetYear(GetYearRequest) returns (stream YearResponse);
}

message GetMonthRequest {
  string year = 1;
  string month = 2;
}

message GetYearRequest {
  string year = 1;
}

message MonthResponse {
  Month month = 1;
}

message YearResponse {
  repeated Month months = 1;
}
message Month {
  string year = 1;
  string month = 2;
  Block first_block = 3;
  Block last_block = 4;
}

message Block {
    uint64 number = 1;
    string hash =  2;
    string parent_hash = 3;
    string timestamp = 4;
}


message Error {
  uint64 code = 1;
  string message = 2;
}